# bin

./: .clangd  CMakeLists.txt  README.md  setup-bin.sh  setup-lib.sh
lib/karg/: CMakeLists.txt  README.md  karg.c  karg.h
libs/karg/: CMakeLists.txt  karg.c  karg.h  karg_internals.c  karg_internals.h  karg_structs.h
libs/libpasswd/: CMakeLists.txt  libpasswd.c  libpasswd.h  libpasswd_internals.c  libpasswd_internals.h
src/ls/: CMakeLists.txt  main.c
src/test_karg/: CMakeLists.txt  main.c
